created python3 version of ORFpy

--- a/ORFpy_original.ipynb
+++ b/ORFpy_original.ipynb
@@ -30,6 +30,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Need to work on:\n",
+    "\n",
+    "* Multi-output for regression\n",
+    "\n",
+    "* Temporal Knowledge Weighting\n",
+    "\n",
+    "* Multi-core operation for tree construction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 114,
    "metadata": {},
