--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597616791795",
+   "name": "python_defaultSpec_1597695840867",
    "display_name": "Python 3.7.8 64-bit ('torch': venv)"
   }
  },
@@ -33,18 +33,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Need to work on:\n",
+    "## Modified version would have:\n",
     "\n",
-    "* Multi-output for regression\n",
+    "* Multi-output for regression - not done. Need to read 'Multivariate Random Forest'\n",
     "\n",
-    "* Temporal Knowledge Weighting\n",
+    "* Temporal Knowledge Weighting - Done. But this seems to reduce accuracy?\n",
     "\n",
-    "* Multi-core operation for tree construction"
+    "* Multi-core operation for tree construction - not done"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
     "import math\n",
-    "import unittest"
+    "import unittest\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,29 +88,16 @@
     "        return list(map(lambda x: x[j], X))\n",
     "\n",
     "    k = len(X[0]) # number of columns in X\n",
-    "    return list(map(lambda j: [ min(col(j)), max(col(j)) ], range(k)))\n",
-    "    \n",
-    "def argmax(x):\n",
-    "    \"\"\"\n",
-    "    returns the index of the element is a list which corresponds to the maximum\n",
-    "    \"\"\"\n",
-    "    # return x.index(max(x))\n",
-    "    return np.argmax(x)\n",
-    "\n",
-    "def log2(x):\n",
-    "    \"\"\"\n",
-    "    log base 2\n",
-    "    \"\"\"\n",
-    "    return np.log2(x)\n"
+    "    return list(map(lambda j: [ min(col(j)), max(col(j)) ], range(k)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Tree:\n",
+    "class Tree: # Node object\n",
     "    \"\"\"\n",
     "    # Tree - Binary tree class\n",
     "\n",
@@ -239,11 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ORT:\n",
+    "class ORT: # Tree object\n",
     "    \"\"\"\n",
     "    constructor for Online Random Forest (ORT)\n",
     "    The theory for ORT was developed by Amir Saffari. see http://lrs.icg.tugraz.at/pubs/saffari_olcv_09.pdf\n",
@@ -272,7 +260,7 @@
     "    \"\"\"\n",
     "    def __init__(self,param):\n",
     "        self.param = param\n",
-    "        self.__age = 0\n",
+    "        self.age = 0\n",
     "        self.minSamples = param['minSamples']\n",
     "        self.minGain = param['minGain']\n",
     "        self.xrng = param['xrng']\n",
@@ -281,6 +269,7 @@
     "        self.numClasses = param['numClasses'] if 'numClasses' in param.keys() else 0\n",
     "        self.maxDepth = param['maxDepth'] if 'maxDepth' in param.keys() else 30 # This needs to be implemented to restrain the maxDepth of the tree. FIXME\n",
     "        self.tree = Tree( Elem(param=param) )\n",
+    "        self.OOBError = 0\n",
     "\n",
     "    def draw(self):\n",
     "        \"\"\"\n",
@@ -301,19 +290,19 @@
     "\n",
     "        ort.update(x,y)\n",
     "        \"\"\"\n",
-    "        k = self.__poisson(1)\n",
+    "        k = self.__poisson(1) # draw a random poisson\n",
     "        if k == 0:\n",
-    "            self.__updateOOBE(x,y)\n",
+    "            self.OOBError = self.__updateOOBE(x,y)\n",
     "        else:\n",
     "            for _ in range(k):\n",
-    "                self.__age += 1\n",
+    "                self.age += 1\n",
     "                (j,depth) = self.__findLeaf(x,self.tree)\n",
     "                j.elem.update(x,y)\n",
     "                #if j.elem.numSamplesSeen > self.minSamples and depth < self.maxDepth: # FIXME: which is the correct approach?\n",
     "                if j.elem.stats.n > self.minSamples and depth < self.maxDepth:\n",
     "                    g = self.__gains(j.elem)\n",
     "                    if any([ gg >= self.minGain for gg in g ]):\n",
-    "                        bestTest = j.elem.tests[argmax(g)]\n",
+    "                        bestTest = j.elem.tests[np.argmax(g)]\n",
     "                        j.elem.updateSplit(bestTest.dim,bestTest.loc)\n",
     "                        j.updateChildren( Tree(Elem(self.param)), Tree(Elem(self.param)) )\n",
     "                        j.left.elem.stats = bestTest.statsL\n",
@@ -365,7 +354,7 @@
     "        \"\"\"\n",
     "        Needs to be implemented\n",
     "        \"\"\"\n",
-    "        pass\n",
+    "        return (y - self.predict(x))\n",
     "\n",
     "class SuffStats:\n",
     "    def __init__(self,numClasses=0,sm=0.0,ss=0.0):\n",
@@ -396,7 +385,7 @@
     "            self.sum = None\n",
     "            self.ss = None\n",
     "\n",
-    "    def pred(self):\n",
+    "    def pred(self): # gives predictions\n",
     "        if self.__classify:\n",
     "            return np.argmax(self.counts)\n",
     "        else:\n",
@@ -448,7 +437,7 @@
     "    def toString(self):\n",
     "        return str(self.pred()) if self.splitDim == -1 else \"X\" + str(self.splitDim+1) + \" < \" + str(round(self.splitLoc,2))\n",
     "\n",
-    "    def pred(self):\n",
+    "    def pred(self): # gives the predicted value\n",
     "        return self.stats.pred()\n",
     "    \n",
     "    def update(self,x,y):\n",
@@ -466,16 +455,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "2020-08-16: Made the code Python3 competible:\n",
-    "Replaced '.has_key' with '_ in .keys()'\n",
-    "Replaced 'xrange' with 'range'\n",
-    "\"\"\"\n",
-    "\n",
     "class ORF:\n",
     "    def __init__(self,param,numTrees=100,ncores=0):\n",
     "        \"\"\"\n",
@@ -483,6 +466,20 @@
     "\n",
     "        One variable (param) is required to construct an ORF:\n",
     "        - param          : same as that in ORT. see >>> help(ORT)\n",
+    "        param is a dictionary having at least the following entries:\n",
+    "\n",
+    "            - minSamples : minimum number of samples a node has to see before splitting\n",
+    "            - minGain    : minimum reduction in node impurity (classification or sd of node) required for splitting\n",
+    "            - xrng       : range of the input space (see utils.dataRange)\n",
+    "\n",
+    "            Also for classification, you must set numClasses:\n",
+    "            - numClasses : number of classes in response (it is assumed that the responses are integers 0,...,n-1)\n",
+    "\n",
+    "            The following are optional parameters with defaults:\n",
+    "            - numClasses : see above (default: 0, for regression)\n",
+    "            - numTests   : Number of potential split location and dimension pairs to test (defaul: 10)\n",
+    "            - maxDepth   : Maximum depth a tree is allowed to have. A tree stops growing branches that have depth = maxDepth (default: 30. NOTE THAT YOUR TREE WILL NOT GROW BEYOND 30 DEEP, SET maxDepth TO BE A VALUE GREATER THAN 30 IF YOU WANT LARGER TREES!!!)\n",
+    "            - gamma      : Trees that are of age 1/gamma may be discarded. \n",
     "\n",
     "        Two parameters are optional: \n",
     "        - numTrees       : number of trees in forest (default: 100)\n",
@@ -497,18 +494,42 @@
     "        self.numTrees = numTrees\n",
     "        self.forest = [ORT(param) for _ in range(numTrees)]\n",
     "        self.ncores = ncores\n",
+    "        self.gamma = 0.05\n",
+    "        self.Xs = []\n",
+    "        self.Ys = []\n",
+    "\n",
     "\n",
     "    def update(self,x,y):\n",
     "        \"\"\"\n",
     "        updates the random forest by updating each tree in the forest. As mentioned above, this is currently not implemented. Please replace 'pass' (below) by the appropriate implementation.\n",
     "        \"\"\"\n",
+    "        self.Xs.append(x) # dataset to construct new tree when one is discarded\n",
+    "        # self.Ys.append(y) # dataset to construct new tree when one is discarded\n",
+    "\n",
     "        if self.ncores > 1:\n",
     "            # parallel updates\n",
     "            pass # FIXME\n",
     "        else:\n",
     "            # sequential updates\n",
+    "            \n",
     "            for tree in self.forest:\n",
-    "                tree.update(x,y)\n",
+    "                tree.update(x,y) # update each t in ORTs\n",
+    "            \n",
+    "            # Temporal Knowledge Weighting\n",
+    "            \n",
+    "            ages = [tree.age for tree in self.forest]\n",
+    "            idx = [i for i, v in enumerate(ages) if v > 1/self.gamma]\n",
+    "            \n",
+    "            k = 1\n",
+    "            if len(idx) > k:\n",
+    "                randomIdx = random.choices(idx, k=k) # choose a random tree among those older than 1/gamma\n",
+    "                OOBErrors = [tree.OOBError for tree in self.forest]\n",
+    "\n",
+    "                r = np.random.uniform(0, 1)\n",
+    "                for ridx in randomIdx:\n",
+    "                    if OOBErrors[ridx] > r: # if a randomly chosen tree's OOBE is larger than some random r\n",
+    "                        self.forest[ridx] = ORT(self.param) # discart the tree and construct a new tree\n",
+    "                \n",
     "\n",
     "    def predict(self,x):\n",
     "        \"\"\"\n",
@@ -520,7 +541,7 @@
     "        orf.predict(x)\n",
     "        \"\"\"\n",
     "        preds = [tree.predict(x) for tree in self.forest]\n",
-    "        if self.classify:\n",
+    "        if self.classify: # if classification\n",
     "            cls_counts = [0] * self.param['numClasses']\n",
     "            for p in preds:\n",
     "                cls_counts[p] += 1\n",
@@ -619,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 172,
    "metadata": {
     "tags": []
    },
@@ -627,13 +648,13 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "ORF Regression:\nf(0,0):          -0.0022676364442068557 +/- [0.22400969]\nMean size:       79.12\nSD size:         21.44632953456256\nMean max depth:  11.0\nSD max depth:    0.0\nRMSE:            0.40607485377147867\n\n\n"
+     "text": "ORF Regression:\nf(0,0):          [0.00262397] +/- [0.26022484]\nMean size:       55.04\nSD size:         28.090733221639002\nMean max depth:  9.98\nSD max depth:    2.510503189128875\nRMSE:            0.39800442902844835\n\n\n"
     }
    ],
    "source": [
     "# ORF Regression Test\n",
     "\n",
-    "def f(x):\n",
+    "def f(x): # from Lui's code\n",
     "    result = np.zeros((x.shape[0], 1))\n",
     "    \"\"\"\n",
     "    outputs (n, 1) np.array\n",
@@ -642,13 +663,19 @@
     "        result[i] = np.sin(x[i, 0]) if x[i, 0] < x[i, 1] else np.cos(x[i, 1] + np.pi/2)\n",
     "    return result\n",
     "\n",
+    "# repeat = 10\n",
+    "# mses = []\n",
+    "# for i in tqdm(range(repeat)):\n",
     "\n",
     "n = 1000\n",
     "X = np.random.randn(n,2)\n",
     "y = f(X)\n",
+    "\n",
     "param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
+    "\n",
     "xtest = np.random.randn(n,2)\n",
     "ytest = f(xtest)\n",
+    "\n",
     "orf = ORF(param, numTrees=100)\n",
     "\n",
     "for i in range(n):\n",
@@ -656,20 +683,22 @@
     "\n",
     "preds = orf.predicts(xtest)\n",
     "\n",
-    "mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) )) # About 0.35~0.41\n",
+    "mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) ))\n",
+    "# mses.append(mse)\n",
+    "\n",
     "print( \"ORF Regression:\")\n",
     "print( \"f(0,0):          \" + str(orf.predict([0,0])) + \" +/- \" + str(orf.predStat([0,0],sd)))\n",
     "print( \"Mean size:       \" + str(orf.meanTreeSize()))\n",
     "print( \"SD size:         \" + str(orf.sdTreeSize()))\n",
     "print( \"Mean max depth:  \" + str(orf.meanMaxDepth()))\n",
     "print( \"SD max depth:    \" + str(orf.sdMaxDepth()))\n",
-    "print( \"RMSE:            \" + str(np.sqrt(mse)))\n",
+    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mses))))\n",
     "print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 174,
    "metadata": {
     "tags": []
    },
@@ -677,7 +706,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n\n426.0\ny/pred\t0\t1\n0\t571\t3\n1\t60\t366\nORF Classify:\nMean max depth: 27.04\nMean Size: 138.44\nSD Size: 24.098573079952185\nAccuracy: 0.937\n\n\n"
+     "text": "\n\n414.0\ny/pred\t0\t1\n0\t586\t0\n1\t84\t330\nORF Classify:\nMean max depth: 17.4\nMean Size: 63.24\nSD Size: 42.69041855890727\nAccuracy: 0.916\n\n\n"
     }
    ],
    "source": [
