Temporal Knowledge Weighting implemented

--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -53,7 +53,10 @@
     "# 2020-08-16: \n",
     "#  * Replaced map(lambda x: ...) with list(map(lambda x: ...))\n",
     "#  * Replaced 'xrange' with 'range'\n",
-    "#  * Replaced '.has_key()' with 'if _ in .keys()'"
+    "#  * Replaced '.has_key()' with 'if _ in .keys()'\n",
+    "\n",
+    "# 2020-08-17:\n",
+    "# * Added temporal knowledge weighting to ORF class"
    ]
   },
   {
