--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,8 @@
     "import random\n",
     "import math\n",
     "import unittest\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from collections import deque"
    ]
   },
   {
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
     "        \"\"\"\n",
     "        Needs to be implemented\n",
     "        \"\"\"\n",
-    "        return (y - self.predict(x))\n",
+    "        return (y - self.predict(x))**2\n",
     "\n",
     "class SuffStats:\n",
     "    def __init__(self,numClasses=0,sm=0.0,ss=0.0):\n",
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,9 +499,7 @@
     "        self.forest = [ORT(param) for _ in range(numTrees)]\n",
     "        self.ncores = ncores\n",
     "        self.gamma = 0.05\n",
-    "        self.Xs = []\n",
-    "        self.Ys = []\n",
-    "\n",
+    "        self.Xs = deque(maxlen=10)\n",
     "\n",
     "    def update(self,x,y):\n",
     "        \"\"\"\n",
@@ -523,7 +522,7 @@
     "            ages = [tree.age for tree in self.forest]\n",
     "            idx = [i for i, v in enumerate(ages) if v > 1/self.gamma]\n",
     "            \n",
-    "            k = 1\n",
+    "            k = 1 # increasing this increases RMSE\n",
     "            if len(idx) > k:\n",
     "                randomIdx = random.choices(idx, k=k) # choose a random tree among those older than 1/gamma\n",
     "                OOBErrors = [tree.OOBError for tree in self.forest]\n",
@@ -531,7 +530,9 @@
     "                r = np.random.uniform(0, 1)\n",
     "                for ridx in randomIdx:\n",
     "                    if OOBErrors[ridx] > r: # if a randomly chosen tree's OOBE is larger than some random r\n",
+    "                        self.param['xrng'] = dataRange(self.Xs)\n",
     "                        self.forest[ridx] = ORT(self.param) # discart the tree and construct a new tree\n",
+    "                        self.forest[ridx].update(x, y)\n",
     "                \n",
     "\n",
     "    def predict(self,x):\n",
@@ -643,15 +644,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
-     "text": "ORF Regression:\nf(0,0):          [0.00262397] +/- [0.26022484]\nMean size:       55.04\nSD size:         28.090733221639002\nMean max depth:  9.98\nSD max depth:    2.510503189128875\nRMSE:            0.39800442902844835\n\n\n"
+     "name": "stderr",
+     "text": "100%|██████████| 10/10 [01:58<00:00, 11.82s/it]ORF Regression:\nf(0,0):          0.016175763254031597 +/- [0.28528195]\nMean size:       84.84\nSD size:         43.308319120585885\nMean max depth:  10.06\nSD max depth:    2.2056859488718037\nRMSE:            0.33487447727328945\n\n\n\n"
     }
    ],
    "source": [
@@ -666,28 +667,28 @@
     "        result[i] = np.sin(x[i, 0]) if x[i, 0] < x[i, 1] else np.cos(x[i, 1] + np.pi/2)\n",
     "    return result\n",
     "\n",
-    "# repeat = 10\n",
-    "# mses = []\n",
-    "# for i in tqdm(range(repeat)):\n",
+    "repeat = 10\n",
+    "mses = []\n",
+    "for i in tqdm(range(repeat)):\n",
     "\n",
-    "n = 1000\n",
-    "X = np.random.randn(n,2)\n",
-    "y = f(X)\n",
+    "    n = 1000\n",
+    "    X = np.random.randn(n,2)\n",
+    "    y = f(X)\n",
     "\n",
-    "param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
+    "    param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
     "\n",
-    "xtest = np.random.randn(n,2)\n",
-    "ytest = f(xtest)\n",
+    "    xtest = np.random.randn(n,2)\n",
+    "    ytest = f(xtest)\n",
     "\n",
-    "orf = ORF(param, numTrees=100)\n",
+    "    orf = ORF(param, numTrees=100)\n",
     "\n",
-    "for i in range(n):\n",
-    "    orf.update(X[i,:],y[i])\n",
+    "    for i in range(n):\n",
+    "        orf.update(X[i,:],y[i])\n",
     "\n",
-    "preds = orf.predicts(xtest)\n",
+    "    preds = orf.predicts(xtest)\n",
     "\n",
-    "mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) ))\n",
-    "# mses.append(mse)\n",
+    "    mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) ))\n",
+    "    mses.append(mse)\n",
     "\n",
     "print( \"ORF Regression:\")\n",
     "print( \"f(0,0):          \" + str(orf.predict([0,0])) + \" +/- \" + str(orf.predStat([0,0],sd)))\n",
@@ -695,13 +696,13 @@
     "print( \"SD size:         \" + str(orf.sdTreeSize()))\n",
     "print( \"Mean max depth:  \" + str(orf.meanMaxDepth()))\n",
     "print( \"SD max depth:    \" + str(orf.sdMaxDepth()))\n",
-    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mses))))\n",
+    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mses)))) # 0.335(TKW with deque=10), 0.373(TKW with deque=50), 0.389 without TKW\n",
     "print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 204,
    "metadata": {
     "tags": []
    },
@@ -709,7 +710,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n\n414.0\ny/pred\t0\t1\n0\t586\t0\n1\t84\t330\nORF Classify:\nMean max depth: 17.4\nMean Size: 63.24\nSD Size: 42.69041855890727\nAccuracy: 0.916\n\n\n"
+     "text": "\n\n398.0\ny/pred\t0\t1\n0\t602\t0\n1\t124\t274\nORF Classify:\nMean max depth: 8.66\nMean Size: 34.16\nSD Size: 31.43919301036299\nAccuracy: 0.876\n\n\n"
     }
    ],
    "source": [
