--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597695840867",
+   "name": "python_defaultSpec_1597772486871",
    "display_name": "Python 3.7.8 64-bit ('torch': venv)"
   }
  },
@@ -33,35 +33,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### On-line Random Forest\n",
+    "---\n",
+    "\n",
+    "Sequential training example <x, y>\n",
+    "\n",
+    "The size of the forest: T\n",
+    "\n",
+    "The minimum number of samples: $\\alpha$\n",
+    "\n",
+    "The minimum gain: $\\beta$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**For** t in 1 to T:\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; k $\\leftarrow$ Poisson($\\lambda$) // $\\lambda$ = 1 in the paper\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; **If** k > 0:\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; **For** _ in 1 to k:\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; j = findLeaf(x) // j-th node\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; // updateNode(j, <x, y>):\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; **If** $|R_{j}| > \\alpha$ and $\\vartriangle L(R_{j}, s) > \\beta$:\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Find the best test:\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $s_{j} = argmax_{s \\in S} \\vartriangle(R_{j}, s)$\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $createLeftChild(p_{jls})$\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $createRightChild(p_{jrs})$\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; **end if**\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; **end for**\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; **else** # If k = 0\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Estimate OOBE_{t} $\\leftarrow$ updateOOBE(<x, y>)\n",
+    "\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; **end if**\n",
+    "\n",
+    "**end for**\n",
+    "\n",
+    "// Temporal Knowledge Weighting\n",
+    "\n",
+    "Select a tree randomly from {$f_{t} | f_{t} \\in F, age_{t} > 1/ \\gamma$}\n",
+    "\n",
+    "**If** OOBE_{t} > rand():\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; // Discard the tree.\n",
+    "\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; $f_{t} = newTree()$\n",
+    "\n",
+    "**end if**\n",
+    "\n",
+    "\n",
+    "Output the forest F\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Modified version would have:\n",
     "\n",
-    "* Multi-output for regression - not done. Need to read 'Multivariate Random Forest'\n",
+    "* Multi-output for regression - not done. Possible options:\n",
     "\n",
-    "* Temporal Knowledge Weighting - Done. But this seems to reduce accuracy?\n",
+    "    * Read and apply 'Multivariate Random Forest'(Segal 2011)\n",
+    "    \n",
+    "    * Limit the number of leaf nodes to be n_actions by setting maxDepth= n_actions/2,\n",
+    "    and obtain the mean action values at each leaf node.\n",
+    "\n",
+    "* Temporal Knowledge Weighting - Done. But this seems to reduce (classification) accuracy?\n",
     "\n",
     "* Multi-core operation for tree construction - not done"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 99,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# **Changes**\n",
+    "**Changes**\n",
     "\n",
-    "# 2020-08-16: \n",
-    "#  * Replaced map(lambda x: ...) with list(map(lambda x: ...))\n",
-    "#  * Replaced 'xrange' with 'range'\n",
-    "#  * Replaced '.has_key()' with 'if _ in .keys()'\n",
+    "* 2020-08-17:\n",
+    "    * Added temporal knowledge weighting in ORF class\n",
     "\n",
-    "# 2020-08-17:\n",
-    "# * Added temporal knowledge weighting to ORF class"
+    "* 2020-08-16: \n",
+    "    * Replaced map(lambda x: ...) with list(map(lambda x: ...))\n",
+    "    * Replaced 'xrange' with 'range'\n",
+    "    * Replaced '.has_key()' with 'if _ in .keys()'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -652,7 +725,7 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "100%|██████████| 10/10 [01:58<00:00, 11.82s/it]ORF Regression:\nf(0,0):          0.016175763254031597 +/- [0.28528195]\nMean size:       84.84\nSD size:         43.308319120585885\nMean max depth:  10.06\nSD max depth:    2.2056859488718037\nRMSE:            0.33487447727328945\n\n\n\n"
+     "text": "100%|██████████| 10/10 [04:03<00:00, 24.37s/it]ORF Regression:\nf(0,0):          [-0.0405768] +/- [0.28277786]\nMean size:       126.72\nSD size:         65.8231607023583\nMean max depth:  19.53\nSD max depth:    6.886460145338338\nRMSE:            0.2915742663424232\n\n\n\n"
     }
    ],
    "source": [
@@ -675,8 +748,9 @@
     "    X = np.random.randn(n,2)\n",
     "    y = f(X)\n",
     "\n",
-    "    param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
-    "\n",
+    "    # param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
+    "    param = {'minSamples': 2, 'minGain': 0.1, 'xrng': dataRange(X), 'maxDepth': 30}\n",
+    "    \n",
     "    xtest = np.random.randn(n,2)\n",
     "    ytest = f(xtest)\n",
     "\n",
@@ -702,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -710,7 +784,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n\n398.0\ny/pred\t0\t1\n0\t602\t0\n1\t124\t274\nORF Classify:\nMean max depth: 8.66\nMean Size: 34.16\nSD Size: 31.43919301036299\nAccuracy: 0.876\n\n\n"
+     "text": "\n\n389.0\ny/pred\t0\t1\n0\t608\t3\n1\t44\t345\nORF Classify:\nMean max depth: 14.48\nMean Size: 82.16\nSD Size: 61.709113539877976\nAccuracy: 0.953\n\n\n"
     }
    ],
    "source": [
@@ -724,7 +798,7 @@
     "n = 1000\n",
     "X = np.random.randn(n,2)\n",
     "y = f(X)\n",
-    "param = {'minSamples': 10, 'minGain': .01, 'numClasses': 2, 'xrng': dataRange(X)}\n",
+    "param = {'minSamples': 2, 'minGain': .01, 'numClasses': 2, 'xrng': dataRange(X)}\n",
     "orf = ORF(param,numTrees=50)\n",
     "\n",
     "for i in range(n):\n",
