--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -86,6 +86,7 @@
     "Select a tree randomly from {$f_{t} | f_{t} \\in F, age_{t} > 1/ \\gamma$}\n",
     "\n",
     "**If** OOBE_{t} > rand():\n",
+    "// In regression, standardize OOBE \n",
     "\n",
     "&nbsp;&nbsp;&nbsp;&nbsp; // Discard the tree.\n",
     "\n",
@@ -109,8 +110,10 @@
     "\n",
     "    * Read and apply 'Multivariate Random Forest'(Segal 2011)\n",
     "    \n",
+    "    * Split data into n_actions and grow independent forest for each action\n",
+    "    \n",
     "    * Limit the number of leaf nodes to be n_actions by setting maxDepth= n_actions/2,\n",
-    "    and obtain the mean action values at each leaf node.\n",
+    "    and obtain the mean action values at each leaf node. (X)\n",
     "\n",
     "* Temporal Knowledge Weighting - Done. But this seems to reduce (classification) accuracy?\n",
     "\n",
