ORF_CartPole added

--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597772486871",
+   "name": "python_defaultSpec_1599089124293",
    "display_name": "Python 3.7.8 64-bit ('torch': venv)"
   }
  },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +350,8 @@
     "        self.maxDepth = param['maxDepth'] if 'maxDepth' in param.keys() else 30 # This needs to be implemented to restrain the maxDepth of the tree. FIXME\n",
     "        self.tree = Tree( Elem(param=param) )\n",
     "        self.OOBError = 0\n",
+    "        self.error_sum = 0\n",
+    "        self.error_n = 0\n",
     "\n",
     "    def draw(self):\n",
     "        \"\"\"\n",
@@ -431,10 +433,11 @@
     "      return loop(0,1)\n",
     "\n",
     "    def __updateOOBE(self,x,y):\n",
-    "        \"\"\"\n",
-    "        Needs to be implemented\n",
-    "        \"\"\"\n",
-    "        return (y - self.predict(x))**2\n",
+    "        self.error_sum += (y - self.predict(x))**2\n",
+    "        self.error_n += 1\n",
+    "        OOBError = np.sqrt(self.error_sum)/self.error_n\n",
+    "\n",
+    "        return OOBError\n",
     "\n",
     "class SuffStats:\n",
     "    def __init__(self,numClasses=0,sm=0.0,ss=0.0):\n",
@@ -535,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,15 +723,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": "100%|██████████| 10/10 [04:03<00:00, 24.37s/it]ORF Regression:\nf(0,0):          [-0.0405768] +/- [0.28277786]\nMean size:       126.72\nSD size:         65.8231607023583\nMean max depth:  19.53\nSD max depth:    6.886460145338338\nRMSE:            0.2915742663424232\n\n\n\n"
+     "name": "stdout",
+     "text": "ORF Regression:\nf(0,0):          [-0.00664792] +/- [0.16688508]\nMean size:       169.24\nSD size:         58.851142467219525\nMean max depth:  23.31\nSD max depth:    5.84253819202344\nRMSE:            0.26336526039368235\n\n\n"
     }
    ],
    "source": [
@@ -743,29 +746,29 @@
     "        result[i] = np.sin(x[i, 0]) if x[i, 0] < x[i, 1] else np.cos(x[i, 1] + np.pi/2)\n",
     "    return result\n",
     "\n",
-    "repeat = 10\n",
-    "mses = []\n",
-    "for i in tqdm(range(repeat)):\n",
+    "# repeat = 10\n",
+    "# mses = []\n",
+    "# for i in tqdm(range(repeat)):\n",
     "\n",
-    "    n = 1000\n",
-    "    X = np.random.randn(n,2)\n",
-    "    y = f(X)\n",
+    "n = 1000\n",
+    "X = np.random.randn(n,2)\n",
+    "y = f(X)\n",
     "\n",
-    "    # param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
-    "    param = {'minSamples': 2, 'minGain': 0.1, 'xrng': dataRange(X), 'maxDepth': 30}\n",
-    "    \n",
-    "    xtest = np.random.randn(n,2)\n",
-    "    ytest = f(xtest)\n",
+    "# param = {'minSamples': 10, 'minGain': 0, 'xrng': dataRange(X), 'maxDepth': 10}\n",
+    "param = {'minSamples': 2, 'minGain': 0.1, 'xrng': dataRange(X), 'maxDepth': 30}\n",
     "\n",
-    "    orf = ORF(param, numTrees=100)\n",
+    "xtest = np.random.randn(n,2)\n",
+    "ytest = f(xtest)\n",
     "\n",
-    "    for i in range(n):\n",
-    "        orf.update(X[i,:],y[i])\n",
+    "orf = ORF(param, numTrees=100)\n",
     "\n",
-    "    preds = orf.predicts(xtest)\n",
+    "for i in range(n):\n",
+    "    orf.update(X[i,:],y[i])\n",
     "\n",
-    "    mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) ))\n",
-    "    mses.append(mse)\n",
+    "preds = orf.predicts(xtest)\n",
+    "\n",
+    "mse = np.mean( list(map(lambda z: (z[0]-z[1])*(z[0]-z[1]) , zip(preds,ytest)) ))\n",
+    "    # mses.append(mse)\n",
     "\n",
     "print( \"ORF Regression:\")\n",
     "print( \"f(0,0):          \" + str(orf.predict([0,0])) + \" +/- \" + str(orf.predStat([0,0],sd)))\n",
@@ -773,8 +776,46 @@
     "print( \"SD size:         \" + str(orf.sdTreeSize()))\n",
     "print( \"Mean max depth:  \" + str(orf.meanMaxDepth()))\n",
     "print( \"SD max depth:    \" + str(orf.sdMaxDepth()))\n",
-    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mses)))) # 0.335(TKW with deque=10), 0.373(TKW with deque=50), 0.389 without TKW\n",
+    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mse)))) # 0.335(TKW with deque=10), 0.373(TKW with deque=50), 0.389 without TKW\n",
     "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[array([0.05815808])]"
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "x = np.random.randn(10, 4)\n",
+    "y = []\n",
+    "for i in range(len(x)):\n",
+    "    y.append([x[i,0]+x[i,1], x[i,2]+x[i,3]])\n",
+    "\n",
+    "y2 = []\n",
+    "for i in range(len(x)):\n",
+    "    y2.append(np.sum(x[i,:]))\n",
+    "\n",
+    "param = {'minSamples': 2, 'minGain': 0.1, 'xrng': dataRange(X), 'maxDepth': 30}\n",
+    "\n",
+    "for i in range(len(x)):\n",
+    "    orf.update(x[i,:],y2[i])\n",
+    "\n",
+    "xtest2 = np.random.rand(1,4)\n",
+    "\n",
+    "preds = orf.predicts(xtest2)\n",
+    "\n",
+    "preds\n"
    ]
   },
   {
