ORF_CartPole added

--- a/GB_CartPole.ipynb
+++ b/GB_CartPole.ipynb
@@ -159,11 +159,11 @@
     "\n",
     "                    if is_done == False: # if not terminal\n",
     "                        q_values_next = self.predict(next_state) # (1,2) array\n",
-    "                        q_update = reward + gamma * np.argmax(q_values_next) # int\n",
+    "                        q_values[action] = reward + gamma * np.argmax(q_values_next) # int\n",
     "                    else: # if terminal\n",
-    "                        q_update = -1 * reward\n",
+    "                        q_values[action] = -1 * reward\n",
     "                    \n",
-    "                    q_values[action] = q_update # q_values: (2,) 1d array\n",
+    "                    # q_values[action] = q_update # q_values: (2,) 1d array\n",
     "\n",
     "                targets.append(q_values) # (r, 2) array (for cartpole)\n",
     "                # td_targets must take q_values as (2,) 1d array \n",
