--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -433,11 +433,12 @@
     "      return loop(0,1)\n",
     "\n",
     "    def __updateOOBE(self,x,y):\n",
+    "        self.error = (y - self.predict(x))**2\n",
     "        self.error_sum += (y - self.predict(x))**2\n",
-    "        self.error_n += 1\n",
-    "        OOBError = np.sqrt(self.error_sum)/self.error_n\n",
-    "\n",
-    "        return OOBError\n",
+    "        # self.error_n += 1\n",
+    "        # OOBE = np.sqrt(self.error_sum)/self.error_n\n",
+    "        OOBE = np.sqrt(self.error) / np.sqrt(self.error_sum)\n",
+    "        return OOBE\n",
     "\n",
     "class SuffStats:\n",
     "    def __init__(self,numClasses=0,sm=0.0,ss=0.0):\n",
