ORF_CartPole added

--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599089124293",
+   "name": "python_defaultSpec_1599250542580",
    "display_name": "Python 3.7.8 64-bit ('torch': venv)"
   }
  },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,11 +433,11 @@
     "      return loop(0,1)\n",
     "\n",
     "    def __updateOOBE(self,x,y):\n",
-    "        self.error = (y - self.predict(x))**2\n",
-    "        self.error_sum += (y - self.predict(x))**2\n",
+    "        self.error = np.abs(y - self.predict(x))\n",
+    "        self.error_sum += self.error\n",
     "        # self.error_n += 1\n",
     "        # OOBE = np.sqrt(self.error_sum)/self.error_n\n",
-    "        OOBE = np.sqrt(self.error) / np.sqrt(self.error_sum)\n",
+    "        OOBE = self.error/self.error_sum\n",
     "        return OOBE\n",
     "\n",
     "class SuffStats:\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "ORF Regression:\nf(0,0):          [-0.00664792] +/- [0.16688508]\nMean size:       169.24\nSD size:         58.851142467219525\nMean max depth:  23.31\nSD max depth:    5.84253819202344\nRMSE:            0.26336526039368235\n\n\n"
+     "text": "ORF Regression:\nf(0,0):          [-0.02831907] +/- [0.21938177]\nMean size:       180.78\nSD size:         60.598959887063565\nMean max depth:  25.38\nSD max depth:    5.271957449898033\nRMSE:            0.2558486164214597\n\n\n"
     }
    ],
    "source": [
@@ -777,7 +777,7 @@
     "print( \"SD size:         \" + str(orf.sdTreeSize()))\n",
     "print( \"Mean max depth:  \" + str(orf.meanMaxDepth()))\n",
     "print( \"SD max depth:    \" + str(orf.sdMaxDepth()))\n",
-    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mse)))) # 0.335(TKW with deque=10), 0.373(TKW with deque=50), 0.389 without TKW\n",
+    "print( \"RMSE:            \" + str(np.mean(np.sqrt(mse)))) # arount 0.25\n",
     "print(\"\\n\")"
    ]
   },
