ORF_CartPole update

--- a/ORFpy_modified.ipynb
+++ b/ORFpy_modified.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1599250542580",
+   "name": "python_defaultSpec_1599463468452",
    "display_name": "Python 3.7.8 64-bit ('torch': venv)"
   }
  },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
     "            lossR = 0 if nR==0 else statsR.impurity()\n",
     "            g = elem.stats.impurity() - (nL/n) * lossL - (nR/n)  * lossR\n",
     "            return 0 if g < 0 else g\n",
-    "        return map(gain, tests)\n",
+    "        return list(map(gain, tests))\n",
     "\n",
     "    def __findLeaf(self, x, tree, depth=0):\n",
     "        if tree.isLeaf(): \n",
@@ -434,10 +434,7 @@
     "\n",
     "    def __updateOOBE(self,x,y):\n",
     "        self.error = np.abs(y - self.predict(x))\n",
-    "        self.error_sum += self.error\n",
-    "        # self.error_n += 1\n",
-    "        # OOBE = np.sqrt(self.error_sum)/self.error_n\n",
-    "        OOBE = self.error/self.error_sum\n",
+    "        OOBE = self.error/y\n",
     "        return OOBE\n",
     "\n",
     "class SuffStats:\n",
@@ -539,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,13 +603,15 @@
     "            if len(idx) > k:\n",
     "                randomIdx = random.choices(idx, k=k) # choose a random tree among those older than 1/gamma\n",
     "                OOBErrors = [tree.OOBError for tree in self.forest]\n",
-    "\n",
-    "                r = np.random.uniform(0, 1)\n",
+    "                goodTree = np.argmin(OOBErrors)\n",
+    "                \n",
     "                for ridx in randomIdx:\n",
+    "                    r = np.random.uniform(0, 1)\n",
     "                    if OOBErrors[ridx] > r: # if a randomly chosen tree's OOBE is larger than some random r\n",
-    "                        self.param['xrng'] = dataRange(self.Xs)\n",
-    "                        self.forest[ridx] = ORT(self.param) # discart the tree and construct a new tree\n",
-    "                        self.forest[ridx].update(x, y)\n",
+    "                        # self.param['xrng'] = dataRange(self.Xs)\n",
+    "                        # self.forest[ridx] = ORT(self.param) # discart the tree and construct a new tree\n",
+    "                        # self.forest[ridx].update(x, y)\n",
+    "                        self.forest[ridx] = self.forest[goodTree]\n",
     "                \n",
     "\n",
     "    def predict(self,x):\n",
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -732,7 +731,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "ORF Regression:\nf(0,0):          [-0.02831907] +/- [0.21938177]\nMean size:       180.78\nSD size:         60.598959887063565\nMean max depth:  25.38\nSD max depth:    5.271957449898033\nRMSE:            0.2558486164214597\n\n\n"
+     "text": "ORF Regression:\nf(0,0):          -0.014874226460698046 +/- [0.23961177]\nMean size:       107.82\nSD size:         28.768803249423502\nMean max depth:  14.97\nSD max depth:    2.6109907558765366\nRMSE:            0.25807802501217486\n\n\n"
     }
    ],
    "source": [
@@ -779,6 +778,15 @@
     "print( \"SD max depth:    \" + str(orf.sdMaxDepth()))\n",
     "print( \"RMSE:            \" + str(np.mean(np.sqrt(mse)))) # arount 0.25\n",
     "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draw plot for regression"
    ]
   },
   {
