ORF_CartPole_v2 uploaded
Former-commit-id: 07c243c4f3c79c10479a9f560a5ff4634861169b
Former-commit-id: d66e35969c321c49deb6badfb6236e14cdd69caa

--- a/ORF_CartPole.ipynb
+++ b/ORF_CartPole.ipynb
@@ -306,7 +306,7 @@
     "end = time.time()\n",
     "duration = int(end - start)\n",
     "\n",
-    "img_file = backup_file_name + \".png\"\n",
+    "img_file = backup_file_name + \".jpg\"\n",
     "print(\"learning duration =\", duration, \" seconds\")\n",
     "print(\"mean reward = \", np.mean(total_reward_episode))\n",
     "print(\"max reward = \", max(total_reward_episode))\n",
@@ -315,26 +315,7 @@
     "plt.xlabel(\"Episode\")\n",
     "plt.ylabel(\"Total reward\")\n",
     "plt.show()\n",
-    "plt.savefig(img_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[(1,\n  array([-0.04391477, -0.00557149, -0.03053941, -0.01413262]),\n  'Model',\n  [[-85.24129979071677], [-85.10824424741513]],\n  1),\n (2,\n  array([-0.0440262 ,  0.18997482, -0.03082206, -0.31629251]),\n  'Model',\n  [[-85.4292921681366], [-94.8596722621309]],\n  0),\n (3,\n  array([-0.0402267 , -0.00469485, -0.03714791, -0.03348693]),\n  'Model',\n  [[-85.62799346374014], [-88.20290210830444]],\n  0),\n (4,\n  array([-0.0403206 , -0.19926494, -0.03781765,  0.24724788]),\n  'Model',\n  [[-94.94636383904871], [-85.28079776562656]],\n  1),\n (5,\n  array([-0.04430589, -0.00362387, -0.03287269, -0.05711965]),\n  'Random',\n  [0.0, 0.0],\n  1),\n (6,\n  array([-0.04437837,  0.19195362, -0.03401509, -0.35999023]),\n  'Model',\n  [[-86.02659200944454], [-96.69663481503947]],\n  0),\n (7,\n  array([-0.0405393 , -0.00266871, -0.04121489, -0.07822411]),\n  'Model',\n  [[-86.31840099626021], [-91.32791076819287]],\n  0),\n (8,\n  array([-0.04059267, -0.19717633, -0.04277937,  0.20117581]),\n  'Random',\n  [0.0, 0.0],\n  1),\n (9,\n  array([-0.0445362 , -0.00146949, -0.03875586, -0.10468918]),\n  'Model',\n  [[-87.01166120788471], [-93.19194478328299]],\n  0),\n (10,\n  array([-0.04456559, -0.19601522, -0.04084964,  0.17551893]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (11,\n  array([-0.04848589, -0.39052947, -0.03733926,  0.45504044]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (12,\n  array([-0.05629648, -0.58510412, -0.02823845,  0.73572379]),\n  'Model',\n  [[-95.40660552575271], [-95.72936978402802]],\n  0),\n (13,\n  array([-0.06799857, -0.77982486, -0.01352398,  1.01938745]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (14,\n  array([-0.08359506, -0.97476398,  0.00686377,  1.30779347]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (15,\n  array([-0.10309034, -1.16997224,  0.03301964,  1.60261689]),\n  'Random',\n  [0.0, 0.0],\n  1),\n (16,\n  array([-0.12648979, -0.9752563 ,  0.06507198,  1.3204082 ]),\n  'Random',\n  [0.0, 0.0],\n  1),\n (17,\n  array([-0.14599491, -0.78101444,  0.09148014,  1.04877971]),\n  'Model',\n  [[-383.05103222533006], [-210.59506937896086]],\n  1),\n (18,\n  array([-0.1616152 , -0.58721744,  0.11245574,  0.7861574 ]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (19,\n  array([-0.17335955, -0.78368991,  0.12817889,  1.11199692]),\n  'Random',\n  [0.0, 0.0],\n  0),\n (20,\n  array([-0.18903335, -0.98024086,  0.15041882,  1.44198617]),\n  'Model',\n  [[-782.84410186662], [-556.4609312898621]],\n  1),\n (21,\n  array([-0.20863817, -0.78725684,  0.17925855,  1.19983535]),\n  'Model',\n  [[-905.5060050816709], [-804.1455488110486]],\n  1),\n (22,\n  array([-0.2243833 , -0.59484815,  0.20325526,  0.96826722]),\n  'Model',\n  [[-861.8647738245432], [-804.1455091975075]],\n  1)]"
-     },
-     "metadata": {},
-     "execution_count": 151
-    }
-   ],
-   "source": [
-    "# minep = np.argmin(total_reward_episode)\n",
-    "ep[80]"
+    "plt.savefig(fname = img_file)"
    ]
   },
   {
