--- a/ORF_mtcar.ipynb
+++ b/ORF_mtcar.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ORF_py as ORF"
+    "import ORF_py_cython as ORF"
    ]
   },
   {
